# ComfyUI-FAI-Node

./: README.md  __init__.py  pyproject.toml  requirement.txt  requirements.txt
example/: Step1_Mask_Generation.json  Step2_Video_Generation.json
modules/: easing.py  log.py  noise.py
nodes/: fai_dynamic_mask.py  fai_voronoi_generator - 複製  fai_voronoi_generator.py
